--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ clay = "clay.cli:main"
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+exclude = ["scratchpad*"]
+
 [tool.black]
 line-length = 100
 target-version = ["py39"]
