--- a/pytest.ini
+++ b/pytest.ini
@@ -14,6 +14,7 @@ markers =
     unit: Unit tests that don't require external dependencies
     slow: Slow tests that take more than 30 seconds
     requires_api: Tests that require API keys to be configured
+    parallel_safe: Tests that are safe to run in parallel
 asyncio_mode = auto
 filterwarnings =
     ignore::DeprecationWarning
