make plans have common prefix

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [tool:pytest]
 testpaths = tests
+norecursedirs = _test _scratchpad .git .venv venv
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
@@ -9,7 +10,15 @@ addopts =
     --strict-markers
     --disable-warnings
     --color=yes
+    --ignore=_test
+    --ignore=_scratchpad
+    --ignore=test_calculator.py
+    --ignore=calculator.py
+    --ignore=test_math_operations.py
+    --ignore=math_operations.py
 asyncio_mode = auto
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
